--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         
         // --- Backend API URL ---
         // This should point to the address where your Node.js server is running.
-        const API_BASE_URL = 'http://localhost:4000';
+        const API_BASE_URL = 'https://video-downloader-app-32hb.onrender.com';
 
         // --- Event Listener for Form Submission ---
         form.addEventListener('submit', async (e) => {
