--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         
         // --- !!! CRITICAL: UPDATE THIS URL !!! ---
         // Replace this with your Render.com backend URL
-        const API_BASE_URL = 'https://your-flask-app-name.onrender.com'; 
+        const API_BASE_URL = 'https://video-downloader-app-tm6b.onrender.com'; 
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault(); 
