--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         const downloadLinksDiv = document.getElementById('download-links');
         
         // --- !!! CRITICAL: UPDATE THIS URL !!! ---
-        // Replace this with your Render.com backend URL
-        const API_BASE_URL = 'https://video-downloader-app-tm6b.onrender.com'; 
+        // Replace this with your NEW Node.js backend URL from Render
+        const API_BASE_URL = 'https://your-new-nodejs-app-name.onrender.com'; 
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault(); 
