--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <header class="bg-white shadow-md">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-blue-600">RapidGrab</h1>
+            <nav>
+                <a href="#downloader" class="text-gray-600 hover:text-blue-600 px-3 py-2">Downloader</a>
+                <a href="#features" class="text-gray-600 hover:text-blue-600 px-3 py-2">Features</a>
+                <a href="#about" class="text-gray-600 hover:text-blue-600 px-3 py-2">About</a>
+            </nav>
         </div>
     </header>
 
@@ -58,9 +63,73 @@
         </div>
     </main>
 
-    <footer class="bg-white mt-12">
-        <div class="container mx-auto px-6 py-4 text-center text-gray-600">
-            <p>&copy; 2024 RapidGrab. All Rights Reserved.</p>
+    <!-- Features Section -->
+    <section id="features" class="bg-white py-16 md:py-24">
+        <div class="container mx-auto px-6">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-3xl font-bold mb-4">Features</h2>
+                <p class="text-gray-600 mb-10">Everything you need in a modern video downloader.</p>
+            </div>
+            <div class="grid md:grid-cols-3 gap-8 text-center">
+                <div class="p-6">
+                    <div class="flex items-center justify-center h-12 w-12 rounded-md bg-blue-500 text-white mx-auto mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M1.5 0A1.5 1.5 0 0 0 0 1.5v13A1.5 1.5 0 0 0 1.5 16h13a1.5 1.5 0 0 0 1.5-1.5v-13A1.5 1.5 0 0 0 14.5 0h-13zM8 8a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8z"/><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Multiple Formats</h3>
+                    <p class="text-gray-600">Download videos in MP4 and as audio-only files.</p>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center justify-center h-12 w-12 rounded-md bg-blue-500 text-white mx-auto mb-4">
+                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M11.536 6.012a.5.5 0 0 1 .707 0l2.121 2.121a.5.5 0 0 1 0 .707L11.536 10.96a.5.5 0 0 1-.707-.707L12.646 8.5H3.5a.5.5 0 0 1 0-1h9.146L11.536 6.012a.5.5 0 0 1 0-.707z"/><path d="M1.5 2.5A1.5 1.5 0 0 1 3 1h10a1.5 1.5 0 0 1 1.5 1.5v11A1.5 1.5 0 0 1 13 15H3a1.5 1.5 0 0 1-1.5-1.5v-11zM3 2a.5.5 0 0 0-.5.5v11a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5v-11a.5.5 0 0 0-.5-.5H3z"/></svg>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">High Quality</h3>
+                    <p class="text-gray-600">Get the best available quality for your downloads, including 1080p, 720p, and more.</p>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center justify-center h-12 w-12 rounded-md bg-blue-500 text-white mx-auto mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16"><path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/></svg>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Secure & Private</h3>
+                    <p class="text-gray-600">Your downloads are processed securely. We don't store your video URLs or files.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- How It Works Section -->
+    <section id="how-it-works" class="bg-gray-100 py-16 md:py-24">
+        <div class="container mx-auto px-6">
+            <div class="max-w-4xl mx-auto text-center">
+                 <h2 class="text-3xl font-bold mb-4">How It Works</h2>
+                 <p class="text-gray-600 leading-relaxed">
+                    RapidGrab does not host any content. When you submit a URL, this website sends a request to our backend server. The server then communicates directly with YouTube's services to get video information and stream data. We then present these direct download links to you. Because we rely on direct communication, our service can be affected by network conditions or changes to YouTube's platform. We believe in providing a simple interface for personal, fair-use purposes, such as offline viewing or creating backups of your own content.
+                 </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about" class="bg-white py-16 md:py-24">
+        <div class="container mx-auto px-6">
+            <div class="max-w-4xl mx-auto text-center">
+                 <h2 class="text-3xl font-bold mb-4">About Us</h2>
+                 <p class="text-gray-600 leading-relaxed">
+                    RapidGrab was created to provide a simple, fast, and reliable way to download YouTube videos for offline viewing. We believe in open access to content and built this tool to be free and easy for everyone to use. Our service is powered by a custom backend, ensuring stable and versatile download options. We are committed to maintaining a user-friendly and ad-free experience.
+                 </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-white border-t border-gray-200 mt-16">
+        <div class="container mx-auto px-6 py-8 text-center text-gray-600">
+            <p class="text-sm">
+                <strong>Disclaimer:</strong> This service is provided "as is" without any warranty. Availability is not guaranteed, as it depends on third-party services and network conditions. Users are solely responsible for ensuring they have the legal right to download and use any content. Please respect copyright laws.
+            </p>
+            <p class="mt-4 text-sm">
+                RapidGrab is an independent tool and is not affiliated with, sponsored by, or endorsed by YouTube.
+            </p>
+            <p class="mt-4 text-sm">&copy; 2024 RapidGrab. All Rights Reserved.</p>
         </div>
     </footer>
 
@@ -74,8 +143,7 @@
         const errorMessageDiv = document.getElementById('error-message');
         const downloadLinksDiv = document.getElementById('download-links');
         
-        // --- !!! CRITICAL: UPDATE THIS URL !!! ---
-        // Replace this with your NEW Node.js backend URL from Render
+        // --- This URL should point to your Node.js backend on Render ---
         const API_BASE_URL = 'https://video-downloader-app-dxwe.onrender.com'; 
 
         form.addEventListener('submit', async (e) => {
