--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
 
         // --- 1. PASTE YOUR FIREBASE CONFIGURATION HERE ---
-        const firebaseConfig = {
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
   apiKey: "AIzaSyCvIyq7hnhwZWzUg0M8TkV378_XaecMoGI",
   authDomain: "rapid-e9181.firebaseapp.com",
   projectId: "rapid-e9181",
@@ -107,6 +108,7 @@
   messagingSenderId: "929215257715",
   appId: "1:929215257715:web:1f3b2aa9b8a2cf2b3fde06",
   measurementId: "G-2WNFZXMCTV"
+};
         };
 
         // Initialize Firebase
