--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
             <div>
                 <h3 class="text-lg font-semibold text-white mb-4">Legal</h3>
                 <ul class="space-y-2">
-                    <li><a href="terms-of-service" class="hover:text-primary transition-colors">Terms of Service</a></li>
-                    <li><a href="privacy-policy" class="hover:text-primary transition-colors">Privacy Policy</a></li>
-                    <li><a href="copyright-policy" class="hover:text-primary transition-colors">Copyright Policy</a></li>
+                    <li><a href="terms-of-service.html" class="hover:text-primary transition-colors">Terms of Service</a></li>
+                    <li><a href="privacy-policy.html" class="hover:text-primary transition-colors">Privacy Policy</a></li>
+                    <li><a href="copyright-policy.html" class="hover:text-primary transition-colors">Copyright Policy</a></li>
                 </ul>
             </div>
             <!-- Contact -->
